tiny css change

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -103,7 +103,7 @@ body {
   color: #fff;
   font-weight: bold;
   font-size: 18px;
-  min-height: 15vw;
+  min-height: 50px;
   padding: 5%;
   text-align: center;
 }
